--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ p {
 p {
   margin: 0;
   line-height: 1.8;
-  color: #666;
+  color: #000;
 }
 
 a {
@@ -86,7 +86,7 @@ header {
 /* Logo */
 .logo {
   color: #000;
-  font-family: cursive;
+  font-family: 'Merienda One', cursive;
   font-size: 2.5rem;
 }
 
@@ -247,7 +247,7 @@ section {
 .project_header,
 .skills_header,
 .contact_header {
-  font-family: cursive;
+  font-family: 'Merienda One', cursive;
   letter-spacing: 0.5em;
   padding: 20px 10px;
   text-align: center;
@@ -280,11 +280,14 @@ section {
 #intro {
   color: #fff;
   margin: 0.5rem;
-  padding: 1rem;
 }
 
 .introduction {
   font-size: 6rem;
+}
+
+.intro-pitch {
+  font-size: 2rem;
 }
 
 .hero {
