--- a/css/main.scss
+++ b/css/main.scss
@@ -7,34 +7,34 @@
   }
 }
 
-
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
 }
-
 
 h1,
 h2,
 h3 {
   margin: 0;
 }
- 
+
 h1,
 h2,
 h3 {
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-weight: lighter;
 }
 
 body,
 span,
 p {
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-size: 1.6rem;
 }
 
@@ -55,19 +55,16 @@ a:hover {
   text-decoration: none;
 }
 
-
-
-
 /* header */
 
 header {
   position: fixed;
-  width:100%;
+  width: 100%;
   z-index: 5;
   display: flex;
   flex-direction: row;
   height: 80px;
-  background: #FFF;
+  background: #fff;
   align-content: center;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
 }
@@ -77,19 +74,16 @@ header {
   z-index: 5;
   padding: 2rem 1rem;
   flex-grow: 4;
-  
 }
 
 /* Logo */
 
 .logo {
   color: #000;
-  font-family: 'Merienda One', cursive;
+  font-family: "Merienda One", cursive;
   font-size: 2.5rem;
   //font-weight: bold;
-  
 }
-
 
 /* --------------- NAV start --------------- */
 
@@ -115,103 +109,101 @@ $blackColor: #020304;
     text-transform: uppercase;
     > span {
       text-transform: none;
-      opacity: .5;
+      opacity: 0.5;
       font-weight: 300;
       font-size: 12px;
     }
   }
-    input + label {
-      position: fixed;
-      top: 30px;
-      right: 30px;
-      height: 20px;
-      width: 15px; 
-      z-index: 5;
-      span {
-        position: absolute;
-        width: 100%;
-        height: 3px;
-        top: 50%;
-        margin-top: -1px;
-        left: 0;
-        display: block;
-        background: $blackColor;
-        transition: .5s;
-      }
-      span:first-child {
-        top: 3px; 
-      }
-      span:last-child {
-        top: 16px; 
-      }      
-    }
-    label:hover {
-      cursor: pointer;
-    }
-    input:checked + label { 
-      span {
-        opacity: 0;
-        top: 50%;
-      }
-      span:first-child {
-        opacity: 1;
-        transform: rotate(405deg);
-      }
-      span:last-child {
-        opacity: 1;
-        transform: rotate(-405deg);
-      }
-    }
-    input ~ nav {
-      background: white;
-      position: fixed;
-      top: 0;
-      left: 0;
+  input + label {
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    height: 20px;
+    width: 15px;
+    z-index: 5;
+    span {
+      position: absolute;
       width: 100%;
-      height: 80px;
-      z-index: 3;
-      transition: .5s;
-      transition-delay: .5s;
-      overflow: hidden;
-      > ul {
-        text-align: center;
-        position: absolute;
-        top: 15%;
-        left: 20%;
-        right: 20%;
-        > li {
-          opacity: 0;
-          transition: .5s;
-          transition-delay: 0s;
+      height: 3px;
+      top: 50%;
+      margin-top: -1px;
+      left: 0;
+      display: block;
+      background: $blackColor;
+      transition: 0.5s;
+    }
+    span:first-child {
+      top: 3px;
+    }
+    span:last-child {
+      top: 16px;
+    }
+  }
+  label:hover {
+    cursor: pointer;
+  }
+  input:checked + label {
+    span {
+      opacity: 0;
+      top: 50%;
+    }
+    span:first-child {
+      opacity: 1;
+      transform: rotate(405deg);
+    }
+    span:last-child {
+      opacity: 1;
+      transform: rotate(-405deg);
+    }
+  }
+  input ~ nav {
+    background: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    z-index: 3;
+    transition: 0.5s;
+    transition-delay: 0.5s;
+    overflow: hidden;
+    > ul {
+      text-align: center;
+      position: absolute;
+      top: 15%;
+      left: 20%;
+      right: 20%;
+      > li {
+        opacity: 0;
+        transition: 0.5s;
+        transition-delay: 0s;
+        display: block;
+        > a {
+          text-decoration: none;
+          color: $blackColor;
+          font-weight: 700;
+          font-family: sans-serif;
           display: block;
-          > a {
-            text-decoration: none;
-            color: $blackColor;
-            font-weight: 700;
-            font-family: sans-serif;
-            display: block;
-            padding: 20px;
-          }
+          padding: 20px;
         }
       }
     }
-    input:checked ~ nav { 
-      height: 100%;
-      transition-delay: 0s;
-      > ul {
-        > li {
-          opacity: 1;
-          transition-delay: .5s;
-        }
+  }
+  input:checked ~ nav {
+    height: 100%;
+    transition-delay: 0s;
+    > ul {
+      > li {
+        opacity: 1;
+        transition-delay: 0.5s;
       }
-    } 
+    }
+  }
 }
 
 /* --------------- nav END --------------- */
 
 /* --------------- header END --------------- */
-
-
 
 /* Content Wrapper */
 
@@ -219,37 +211,33 @@ $blackColor: #020304;
   display: flex;
   flex-direction: column;
   position: relative;
-  top:8rem;
+  top: 8rem;
 }
 
 /* Section Headers */
 
 section {
-  padding-top: 8rem;  
+  padding-top: 8rem;
   min-height: 400px;
 }
 
 .project_header,
 .skills_header,
 .contact_header {
-  font-family: 'Merienda One', cursive;
+  font-family: "Merienda One", cursive;
   //font-weight: bold;
   letter-spacing: 0.5em;
   padding: 20px 10px;
   text-align: center;
-  box-shadow:
-    inset 0 -0.1em #888,
-    inset 0 -0.175em #888;
-  background-image: linear-gradient(transparent 66%, #EEFAFD 34%);
+  box-shadow: inset 0 -0.1em #888, inset 0 -0.175em #888;
+  background-image: linear-gradient(transparent 66%, #eefafd 34%);
 }
-
 
 /* About Me */
 
 #aboutMe {
   background-color: #90caf9;
   margin: 4rem 0 0 0;
-
 }
 
 .about {
@@ -263,16 +251,14 @@ section {
   color: #fff;
   margin: 0.5rem;
   //padding: 1rem;
-  
 }
 
 .introduction {
   font-size: 6rem;
-  
 }
 
 .intro-pitch {
-  font-size: 2rem; 
+  font-size: 2rem;
 }
 
 .hero {
@@ -281,9 +267,8 @@ section {
   border-width: 0.6rem;
   border-color: white;
   display: none;
-  margin: 0 2rem ;
+  margin: 0 2rem;
 }
-
 
 /* Project */
 /* Row */
@@ -312,7 +297,7 @@ section {
   height: 450px;
   margin: 3rem 0 4.3rem;
   box-shadow: 0 0 3rem rgba(0, 0, 0, 0.15);
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .card__tag-wrapper {
@@ -326,7 +311,7 @@ section {
 .card__tag {
   display: inline-block;
   padding: 1rem 3.2rem;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .card__img {
@@ -354,7 +339,7 @@ section {
   margin: 1.2rem 0;
 }
 
-.button_cover{
+.button_cover {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -384,9 +369,8 @@ section {
 
 .button2 {
   background-color: #7ccf9f;
-  border: 1px solid #7ccf9f ;
+  border: 1px solid #7ccf9f;
 }
-
 
 /* Skills*/
 
@@ -405,12 +389,12 @@ section {
   font-weight: bold;
 }
 
-.graph_cont{
+.graph_cont {
   flex-grow: 6;
   padding: 1rem;
 }
 
-.bar{
+.bar {
   height: 3rem;
   max-width: 800px;
   margin: 0 auto 1rem auto;
@@ -420,8 +404,8 @@ section {
   padding: 0 0 0 1rem;
   position: relative;
 }
-.bar::before{
-  content: '';
+.bar::before {
+  content: "";
   width: 100%;
   position: absolute;
   left: 0;
@@ -430,8 +414,8 @@ section {
   z-index: -2;
   background: #ecf0f1;
 }
-.bar::after{
-  content: '';
+.bar::after {
+  content: "";
   background: #2ecc71;
   height: 3rem;
   transition: 0.7s;
@@ -444,39 +428,38 @@ section {
   z-index: -1;
 }
 
-.bar1::after{
+.bar1::after {
   max-width: 90%;
 }
-.bar2::after{
+.bar2::after {
   max-width: 70%;
 }
-.bar3::after{
+.bar3::after {
   max-width: 50%;
 }
-.bar4::after{
+.bar4::after {
   max-width: 50%;
 }
-.bar5::after{
+.bar5::after {
   max-width: 60%;
 }
-  
+
 /*The Animation.*/
 
-@-webkit-keyframes bar-before{
-  0%{
+@-webkit-keyframes bar-before {
+  0% {
     width: 0;
   }
-  100%{
+  100% {
     width: 100%;
   }
 }
-  
+
 /*Size the bars.*/
 
-.bar5::after{
+.bar5::after {
   max-width: 60%;
 }
-
 
 /* Contacts */
 
@@ -492,30 +475,27 @@ section {
   margin: 3rem;
 }
 
-
-
 /* Footer*/
-footer {
+.footer {
   position: relative;
   top: 8rem;
   height: 5rem;
   background: #000;
   text-align: center;
   padding: 1rem;
-  color: #FFF;
+
+  .footer-content {
+    color: #fff;
+  }
 }
-
-
 
 /* Breakpoints */
 
 @media (max-width: 400px) {
-
   /* header logo*/
   .logo {
     font-size: 2rem;
   }
-
 
   /*Project Card*/
 
@@ -535,19 +515,17 @@ footer {
     padding: 0 1rem;
     font-size: 1.5rem;
   }
- 
+
   /*contact link*/
   .contact-links {
     margin: 1.5rem;
   }
 }
 
-
 /* Tablet */
 
 @media (min-width: 760px) {
-
-  .mobile_nav  {
+  .mobile_nav {
     display: none;
   }
 
@@ -578,7 +556,6 @@ footer {
     letter-spacing: 0.1rem;
   }
 
-
   /* Display hero image */
   .hero {
     display: block;
@@ -589,7 +566,6 @@ footer {
     flex-direction: row;
     justify-content: center;
   }
-
 
   /* Row */
 
@@ -605,20 +581,12 @@ footer {
   .card {
     margin: 4rem 2rem;
   }
-
 }
-
-
 
 /* Desktop */
 
 @media (min-width: 1190px) {
-
   .head_logo {
     margin-left: 5rem;
-
   }
-  
 }
-
-
